# research

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  agent.py  config.py  config.yaml  main.py  portfolio-analysis.md  pyproject.toml  requirements.txt  run.sh  run_interactive.sh  run_single.sh  supervisord.conf
.claude/commands/: poly.md
algo-trader/: .env.example  .gitignore  CLAUDE.md  Dockerfile  config.yaml  main.py  requirements.txt
analysis/: crowding_detector.py
backtest/: data_collector.py  reporter.py  simulator.py
config/: .env.example  markets.yaml  settings.py  settings.yaml  wallets.yaml
connectors/: alert_sink.py  cli.py  goldsky.py  open_meteo.py  polymarket_gamma.py  station_obs.py
dashboard/: app.py
deploy/: weather-bot-backtest.service  weather-bot.service  weather-bot.timer
execution/: live_trader.py  paper_trader.py  risk_manager.py
lib/: cli.py  health.py  logger.py  risk.py  state.py
monitor/: dispute_monitor.py  position_monitor.py
polymarket-system/: .env  .gitignore  CLAUDE.md  requirements.txt  start.sh
scripts/: backfill.py  daily_report.py  init_db.py  run_scout.py  setup.sh
skills/: compute_technicals.py  fetch_candles.py  fetch_financials.py  fetch_insiders.py  fetch_news.py  fetch_quote.py  fetch_sentiment.py  fetch_targets.py  score_fundamentals.py  send_webhook.py  summarize_news.py  utils.py
strategies/: binary_arb.py  edge_detector.py  gaussian_model.py  ladder_builder.py  resolution_parser.py
tests/: test_analyst.py  test_cli.py  test_risk.py  test_skills.py  test_state.py
(+110 files in other folders)
