[project]
name = "polymarket-weather-bot"
version = "0.1.0"
description = "Polymarket weather temperature arbitrage and ladder trading bot"
requires-python = ">=3.10"

dependencies = [
    "polymarket-apis>=0.1",
    "httpx>=0.27",
    "scipy>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
]

[project.scripts]
weather-bot = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
